--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/nicole-code/80s-calculator",
+  "homepage": "https://nicole-code.github.io/80s-calculator",
   "private": true,
-
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
